--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,14 +1,20 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
-name: Go CI
-
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+name: Go
+on: workflow_call
 
 jobs:
-  call-ci:
-    uses: qntx/workflows/.github/workflows/go.yml@main
+  build:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    steps:
+      - uses: actions/checkout@v5
+      - uses: actions/setup-go@v6
+        with: 
+          go-version: "1.25"
+      - name: Install deps
+        if: runner.os == 'Linux'
+        run: sudo apt-get update -qq && sudo apt-get install -y libx11-dev libgl1-mesa-dev pkg-config
+      - run: go mod tidy
+      - run: go build -v ./...
+      - run: go test -v ./...
