--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,7 +19,13 @@ jobs:
           go-version: "1.25"
       - name: Install deps
         if: runner.os == 'Linux'
-        run: sudo apt-get update -qq && sudo apt-get install -y libx11-dev libgl1-mesa-dev pkg-config
+        run: |
+          sudo apt-get update -qq
+          sudo apt-get install -y \
+            xorg-dev \
+            libgl1-mesa-dev \
+            libasound2-dev \
+            pkg-config
       - run: go mod tidy
       - run: go build -v ./...
       - run: go test -v ./...
